boreal/tests/assets/invalid_files/compilation/expression_incompatible_types8.yar
// [error: expressions have invalid types]
rule a {
    condition:
        for any i in ("a", "b"):
            (i >= 2)
}
